# vrc-lighting-controller

./: .gitignore  README.md  index.html  output.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
docs/: protocol.md  usage-guide.md
scripts/: prepare-runtime-deps.mjs
src/: App.vue  output-window.ts
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ipc.rs  main.rs  persistence.rs
src-tauri/src/engine/: cue.rs  effect.rs  mod.rs  strobe.rs
src-tauri/src/output/: mod.rs  ndi.rs  spout.rs
src-tauri/src/render/: layout.rs  mod.rs
src-tauri/src/server/: mod.rs  ws.rs
src-tauri/src/state/: fixture.rs  group.rs  mod.rs  palette.rs  preset.rs
src/api/: adapter.ts  tauri.ts  ws.ts
src/components/: BottomFaders.vue  ColorWheel.vue  CueList.vue  EffectPanel.vue  EncoderKnob.vue  FaderStrip.vue  FixtureGrid.vue  GroupPool.vue  OutputPreview.vue  SettingsModal.vue  StatusStrip.vue  XYPad.vue
src/components/perf/: LightFaderColumn.vue  LightToggleRow.vue  MasterAngleColumn.vue  PalettePad.vue  RgbMasterFaders.vue  RotaryKnob.vue  StateSnapshotsBar.vue  VerticalFader.vue
src/composables/: useKeyboardBindings.ts
src/layouts/: ConsoleLayout.vue  PerformanceLayout.vue
src/stores/: lighting.ts
src/types/: lighting.ts
src/utils/: frameRenderer.ts
