[package]
name = "vrc-lighting-controller"
version = "0.1.0"
edition = "2021"
description = "VRC Stage Lighting Controller"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
futures = "0.3"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
simplelog = "0.12"
dirs = "6"
grafton-ndi = "0.11"
include_dir = "0.7"
mime_guess = "2"

[target.'cfg(windows)'.dependencies]
rust-spout2 = "0.1.3"
autocxx = "0.26"
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
glow = "0.16"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = "thin"
codegen-units = 4
opt-level = 2
strip = true
